--- a/debian_harmattan/changelog
+++ b/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+musikloud2 (0.0.4) unstable; urgency=low
+  * Fix access to download categories.
+
+ -- Stuart Howarth <showarth@marxoft.co.uk>  Tue, 11 Aug 2015 14:30:41 +0000
+
 musikloud2 (0.0.3) unstable; urgency=low
   * Initial harmattan release.
 
